Bug 344453: AttributeChanged events sent out twice. Also make CharacterDataChanged notifications go out even for orphaned nodes. r/sr=jst